--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "author": "jabir",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.3.5",
     "body-parser": "^1.20.2",
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongodb": "^5.4.0"
   }
 }
